--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                    xmlns:AssemblyBrowser="clr-namespace:ILSpyVisualizer.AssemblyBrowser">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                    
+                    xmlns:ViewModels="clr-namespace:ILSpyVisualizer.AssemblyBrowser.ViewModels">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ImagesDictionary.xaml"/>
     </ResourceDictionary.MergedDictionaries>
@@ -15,7 +15,7 @@
     </ControlTemplate>
 
     <!--Member-->
-    <DataTemplate DataType="{x:Type AssemblyBrowser:MemberViewModel}">
+    <DataTemplate DataType="{x:Type ViewModels:MemberViewModel}">
         <Grid Margin="0, 2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -33,7 +33,7 @@
     </DataTemplate>
 
     <!--Type-->
-    <DataTemplate DataType="{x:Type AssemblyBrowser:TypeViewModel}"
+    <DataTemplate DataType="{x:Type ViewModels:TypeViewModel}"
                   x:Key="TypeDataTemplate">
         <DataTemplate.Resources>
             <Style x:Key="TypeNameTextBlockStyle" TargetType="{x:Type TextBlock}">
@@ -76,11 +76,14 @@
                                        HorizontalAlignment="Center"
                                        VerticalAlignment="Center"
                                        TextOptions.TextRenderingMode="Grayscale"/>
-                            <StackPanel x:Name="pnlButtons"
-                                        Orientation="Horizontal"
-                                        Visibility="Collapsed"
-                                        Grid.Column="1">
-                                <Button VerticalAlignment="Center"                                                                      
+                            <Border Background="White"
+                                    CornerRadius="8"
+                                    x:Name="pnlButtons"
+                                    Visibility="Collapsed"
+                                    HorizontalAlignment="Right"
+                                    VerticalAlignment="Center">
+                                <StackPanel Orientation="Horizontal">
+                                    <Button VerticalAlignment="Center"                                                                      
                                         Command="{Binding NavigateCommand}" 
                                         Margin="4, 0"
                                         Width="16"
@@ -91,13 +94,14 @@
                                         Template="{StaticResource ImageButtonTemplate}"
                                         Visibility="{Binding ShowNavigateCommand, Converter={StaticResource BooleanToVisibilityConverter}}"/>
 
-                                <ToggleButton IsChecked="{Binding ShowMembers}"                                          
+                                    <ToggleButton IsChecked="{Binding ShowMembers}"                                          
                                               Width="16"
                                               Height="16"
                                               Margin="4, 0"                                          
                                               Background="{StaticResource MagnifierDrawing}"
                                               Template="{StaticResource ImageButtonTemplate}"/>
-                            </StackPanel>
+                                </StackPanel>
+                            </Border>
                         </Grid>
                     </Border>
                     <ItemsControl x:Name="icMembers"
@@ -125,7 +129,7 @@
     </DataTemplate>
 
     <!--Assembly-->
-    <DataTemplate DataType="{x:Type AssemblyBrowser:AssemblyViewModel}">
+    <DataTemplate DataType="{x:Type ViewModels:AssemblyViewModel}">
         <Grid Margin="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -146,15 +150,15 @@
                     <ControlTemplate>
                         <Border Background="Transparent">
                             <Path Stretch="Fill" 
-                                                      StrokeThickness="0.5" 
-                                                      Stroke="#FF333333" 
-                                                      Fill="#FF969696" 
-                                                      Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
-                                                      HorizontalAlignment="Stretch" 
-                                                      VerticalAlignment="Stretch"
-                                                      Height="10"
-                                                      Width="10"
-                                                      Margin="5, 0"/>
+                                  StrokeThickness="0.5" 
+                                  Stroke="#FF333333" 
+                                  Fill="#FF969696" 
+                                  Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
+                                  HorizontalAlignment="Stretch" 
+                                  VerticalAlignment="Stretch"
+                                  Height="10"
+                                  Width="10"
+                                  Margin="5, 0"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -166,7 +170,7 @@
                 <Setter TargetName="btnRemove" Property="Opacity" Value="1"/>
             </Trigger>
             <DataTrigger Binding="{Binding ShowRemoveCommand}" Value="False">
-                <Setter TargetName="btnRemove" Property="Visibility" Value="Hidden"/>
+                <Setter TargetName="btnRemove" Property="Visibility" Value="Collapsed"/>
             </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
