--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
@@ -1,9 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                    xmlns:Controls="clr-namespace:GraphSharp.Controls;assembly=GraphSharp.Controls">
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="DataTemplatesDictionary.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">    
     <Style TargetType="{x:Type Hyperlink}"
            x:Key="HyperlinkStyle">
         <Setter Property="TextDecorations" Value="{x:Null}"/>
@@ -14,18 +10,5 @@
                 <Setter Property="TextDecorations" Value="Underline"/>
             </Trigger>
         </Style.Triggers>
-    </Style>
-
-    <Style TargetType="{x:Type Controls:VertexControl}">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Controls:VertexControl}">
-
-                    <ContentPresenter Content="{TemplateBinding Vertex}" 
-                                      ContentTemplate="{StaticResource TypeDataTemplate}"/>
-
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
+    </Style>    
 </ResourceDictionary>
